DevOCL/src/objects/CLQ_Transaction_Document__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Assigned_User_Email__c</fullName>
        <label>Assigned User Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Assigned_to_email__c</fullName>
        <formula>CLQ_Program_Transaction__r.CLQ_Transaction_Assigned_To__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned to email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Document_Comments__c</fullName>
        <label>Document Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CLQ_Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attached and Not Verified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Document_Type__c</fullName>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Application Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator Documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident Documents</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Document__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document</label>
        <referenceTo>CLQ_Standard_Document__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Transaction Document object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_PT_Record_type_formula__c</fullName>
        <formula>CLQ_Program_Transaction__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PT Record type formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_No_Formula__c</fullName>
        <formula>CLQ_Program_Transaction__r.CLQ_Program_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program No Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Program_Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Transaction</label>
        <referenceTo>CLQ_Program_Transaction__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Submission_Date__c</fullName>
        <label>Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Document_Affiliation__c</fullName>
        <label>Document Affiliation</label>
        <picklist>
            <picklistValues>
                <fullName>Program</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Comments__c</fullName>
        <label>Document Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Document_Points__c</fullName>
        <label>Document Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Status__c</fullName>
        <label>Document Status</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Revision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Status Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-Submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <label>Document Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Documents__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Document Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Std_Doc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Std Doc</label>
        <referenceTo>CLQ_OCLQS_Configuration_Detail__c</referenceTo>
        <relationshipLabel>Transaction Documents</relationshipLabel>
        <relationshipName>Transaction_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Transaction Document</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transaction Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>